--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -1,8 +1,8 @@
 .modal__title {
+  color: #000000;
   font-weight: 500;
   font-size: 24px;
   line-height: 32px;
-  color: #000000;
   margin: 0 0 32px 0;
 }
 
@@ -12,8 +12,9 @@
 }
 
 .container__state {
-  display: flex;
   align-items: center;
-  gap: 10px 56px;
+  display: flex;
+  gap: 10px 0;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
