--- a/src/components/StateName/styles.css
+++ b/src/components/StateName/styles.css
@@ -1,6 +1,11 @@
-s.state__name {
+.box__state {
+  width: 33%;
+}
+
+.state__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 40px;
   color: #000000;
+  margin: 0;
 }
