--- a/src/components/StateName/styles.css
+++ b/src/components/StateName/styles.css
@@ -3,9 +3,15 @@
 }
 
 .state__name {
+  cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 40px;
   color: #000000;
   margin: 0;
+}
+
+.state__name:hover {
+  text-decoration: underline;
+  color: #042ca6;
 }
